--- a/Firmware/Firmware/settings.html
+++ b/Firmware/Firmware/settings.html
@@ -13,11 +13,8 @@
     <link rel="stylesheet" href="pure-min.css">
 
 
-    <script src="jquery-1.11.2.min.js"></script>
-    <script src="jquery-ui.min.js"></script>
-    <script src="jquery.slider.js"></script>
+    <script src="jquery.min.js"></script>
     <script src="esplux.js"></script>
-    <link href="jquery-ui.min.css" rel="stylesheet" />
 
 
 
