a few more changes, progressing towards a fully functional build
a few more changes, progressing towards a fully functional build

--- a/Firmware/Firmware/http/index.html
+++ b/Firmware/Firmware/http/index.html
@@ -175,7 +175,7 @@
         </header>
         <div id="lc" class="box">
             <div class="head bl">
-                Light Control - Garage
+                Light Control - <span id="LightName"><i>Unknown</i></span>
             </div>
             <div class="content">
                 <div id="slideC">
