Unable to get NodeMCU to scan for networks and list them on a webpage at this point in time. reverting.

--- a/Firmware/http/index.html
+++ b/Firmware/http/index.html
@@ -216,13 +216,11 @@
             </div>
             <div class="content">
                 <ul>
-                    <li><span class="label">Network:</span><span class="input"><select class="o"><option>- No Change - </option>
-                        <option>Mekanism</option>
-                        <option>Soundmate</option>
+                    <li><span class="label">Network:</span><span class="input"><select id="netList" class="o"><option>- No Change - </option>
                     </select></span>
                         <button id="scan" style="margin: 0px 0px 1px -26px; padding: 7px;">
                             Scan</button></li>
-                    <li><span class="label">Password:</span><span class="input"><input class="o" /></span></li>
+                    <li><span class="label">Password:</span><span class="input"><input class="o" type="password" /></span></li>
                     <li id="staticIP" class="so"><span class="check selected"></span>Set Static IP?</li>
                     <li><span class="label">IP Address:</span><span class="input"><input id="ip" class="o" /></span></li>
                     <li><span class="label">Subnet:</span><span class="input"><input id="sn" class="o" /></span></li>
