Fixed bug where the subnet would stop being populated after saving the light name

--- a/Firmware/http/index.html
+++ b/Firmware/http/index.html
@@ -348,7 +348,7 @@
             e.currentTarget.style.width = e.currentTarget.offsetWidth;
             e.currentTarget.style.color = "#aaa";
             e.currentTarget.innerHTML = "&nbsp; saved &nbsp;";
-            setTimeout(function () { sn.innerHTML = "save name"; sn.style.color = "#fff"; }, 3000);
+            setTimeout(function () { sna.innerHTML = "save name"; sna.style.color = "#fff"; }, 3000);
             setTimeout(function () { getState("getState.lua"); }, 1000);
         }
         function saveNetwork(e) {
